--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -1,30 +1,73 @@
 {
-  "home_title": " الرئيسية",
-  "home_description": " مرحباً بك في موقعنا",
-  "common": {
-    "changeLanguage": "تغيير اللغة",
-    "currentLanguage": "اللغة الحالية",
-    "translationTests": "اختبارات الترجمة",
-    "loading": "جارٍ التحميل..."
+  "company": {
+    "name": "الأمريكية جروب",
+    "description": "خدمات إصلاح الأدوات الكهربائية المتخصصة"
   },
-  "welcome": "أهلاً وسهلاً",
-  "navigation": {
-    "home": "الرئيسية",
-    "about": "حول",
-    "contact": "اتصل بنا"
+  "home": {
+    "services": "خدماتنا",
+    "contact": "تواصل معنا",
+    "ourServices": "خدماتنا",
+    "contactUs": "تواصل معنا"
   },
-  "pages": {
-    "home": {
-      "title": "الصفحة الرئيسية",
-      "description": "مرحباً بك في موقعنا",
-      "subtitle": "رحلتك تبدأ من هنا"
+  "services": {
+    "repair": "إصلاح الأجهزة",
+    "repairDesc": "نقوم بإصلاح جميع أنواع الأدوات الكهربائية بأعلى جودة وأفضل الأسعار",
+    "maintenance": "الصيانة الدورية",
+    "maintenanceDesc": "خدمات صيانة دورية لضمان عمل أجهزتك بكفاءة عالية",
+    "consultation": "الاستشارات الفنية",
+    "consultationDesc": "نقدم استشارات فنية متخصصة لاختيار وصيانة الأدوات الكهربائية"
+  },
+  "contact": {
+    "phone": "اتصل بنا",
+    "email": "راسلنا",
+    "location": "موقعنا",
+    "address": "القاهرة، مصر"
+  },
+  "errors": {
+    "needHelp": "هل تحتاج للمساعدة؟ تواصل معنا:",
+    "404": {
+      "title": "الصفحة غير موجودة",
+      "message": "عذراً، لا يمكن العثور على الصفحة التي تبحث عنها. ربما تكون قد حُذفت أو تغير عنوانها أو لا تملك الصلاحية للوصول إليها.",
+      "goHome": "العودة للرئيسية",
+      "goBack": "العودة للخلف"
+    },
+    "403": {
+      "title": "غير مصرح لك بالدخول",
+      "message": "عذراً، لا تملك الصلاحية للوصول إلى هذه الصفحة أو المورد المطلوب. يرجى تسجيل الدخول أو التحقق من صلاحياتك.",
+      "goHome": "العودة للرئيسية",
+      "login": "تسجيل الدخول"
+    },
+    "400": {
+      "title": "طلب غير صحيح",
+      "message": "عذراً، هناك خطأ في البيانات المرسلة أو تنسيق الطلب غير صحيح. يرجى التحقق من البيانات والمحاولة مرة أخرى.",
+      "goBack": "العودة للخلف",
+      "goHome": "العودة للرئيسية",
+      "tips": {
+        "title": "نصائح لحل المشكلة:",
+        "checkUrl": "تأكد من صحة الرابط المدخل",
+        "checkData": "تحقق من البيانات المدخلة وتأكد من اكتمالها",
+        "tryAgain": "أعد المحاولة بعد بضع دقائق"
+      }
+    },
+    "500": {
+      "title": "خطأ في الخادم",
+      "message": "عذراً، حدث خطأ داخلي في الخادم ولا يمكن معالجة طلبك في الوقت الحالي. فريقنا التقني يعمل على حل المشكلة. يرجى المحاولة مرة أخرى خلال بضع دقائق.",
+      "refresh": "تحديث الصفحة",
+      "goHome": "العودة للرئيسية"
     }
   },
-  "forms": {
-    "title": "نموذج",
-    "name": "الاسم",
-    "email": "البريد الإلكتروني",
-    "submit": "إرسال",
-    "cancel": "إلغاء"
+  "navigation": {
+    "home": "الرئيسية",
+    "services": "الخدمات",
+    "about": "عن الشركة",
+    "contact": "اتصل بنا",
+    "language": "اللغة"
+  },
+  "buttons": {
+    "tryAgain": "حاول مرة أخرى",
+    "back": "رجوع",
+    "home": "الرئيسية",
+    "contact": "تواصل معنا",
+    "refresh": "تحديث"
   }
 }
